--- a/Simple Form/user_reg.html
+++ b/Simple Form/user_reg.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
+
 <html>
-
-<head>
-<title>Form site</title>
-</head>
-
-<h3>Example page to insert some user registration data into the MySQL database using PHP</h3>
-
+  
 <body>
-
-<form method="post" action="connect.php">
-Username : <input type="text" name="username"><br><br>
-Password : <input type="password" name="password"><br><br>
-<input type="submit" value="Submit">
+  
+<h1>A small example page to insert some data in to the MySQL database using PHP</h1>
+  
+<form action="insert.php" method="post">
+  
+Firstname: <input type="text" name="fname" /><br><br>
+Lastname: <input type="text" name="lname" /><br><br>
+<input type="submit" />
+  
 </form>
-
+  
 </body>
-
+  
 </html>
